--- a/views/components/jumbotron.jade
+++ b/views/components/jumbotron.jade
@@ -1,8 +1,8 @@
 // Jumbotron
 
-.container-fluid(style="margin-bottom: 60px")
+.container(style="margin-bottom: 60px")
     .jumbotron(style="background:#1c2334; color:#2bc0f5")
         h1.text-center.animated.bounceInDown Voltus 4
-        p.text-center.animated.bounceInDown La solución a todos tus problemas tecnológicos, te mantenemos conectado con la red de talleres de la Habana.
+        p.text-center.animated.bounceInDown Soluciona el problema, mantenemos conectada la red de talleres en Cuba.
         p.text-center.animated.bounceInUp
-            a.btn.btn-lg.btn-outline-inverse(href="/pub", role="button") Publica tu problema &raquo;
+            a.btn.btn-lg.btn-outline-inverse(href="/pub", role="button") Inserta tu problema &raquo;
