fixing problem content not sending in email

--- a/views/listings_page.jade
+++ b/views/listings_page.jade
@@ -5,6 +5,6 @@ block content
   
   include components/navbar.jade
   include components/listings.jade
-  include components/footer.jade
+  //include components/footer.jade
 
   script(src="listing.js")
