--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,11 +7,11 @@ html(lang="en")
     meta(name="description", content="")
     meta(name="author", content="")
 
-    title V4 Soluciones Tecnológicas
+    title Voltus 5
 
     link(rel='stylesheet', href='bootstrap/css/bootstrap.min.css')
     link(rel='stylesheet', href='font-awesome/css/font-awesome.css')
-    link(rel='stylesheet', href='animate/animate.css')
+    //link(rel='stylesheet', href='animate/animate.css')
     link(rel='stylesheet', href='styles.css')
     block styles
 
